--- a/views/layout.html
+++ b/views/layout.html
@@ -123,6 +123,15 @@ $(document).ready(function(){
       });
     }
   });
+  
+   $('#import_file').change(function(){
+     $('#form-import').submit();
+   });
+   
+   $('.import').on('click', function(){
+      console.log('Import');
+      $('#import_file').click();
+   });
 });
 </script>
 </html>
